fixed overflow on X axis

--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,12 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
+  html, body {
+  overflow-x: hidden !important;
+  max-width: 100vw;
+}
+
+
   html {
     scroll-behavior: smooth;
     @apply bg-[#060606] text-white scroll-smooth;
